--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,13 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
+            android:name=".FivesOrganiserApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
