--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.0'
+    // Define versions in a single place
+    ext {
+        // Sdk and tools
+        minSdkVersion = 21
+        targetSdkVersion = 25
+        compileSdkVersion = 26
+        buildToolsVersion = '26.0.0'
+
+        // App dependencies
+        supportLibraryVersion = '26.0.0-beta2'
+        guavaVersion = '18.0'
+        glideVersion = '3.6.1'
+        junitVersion = '4.12'
+        mockitoVersion = '2.7.21'
+        hamcrestVersion = '1.3'
+        runnerVersion = '0.5'
+        rulesVersion = '0.5'
+        espressoVersion = '2.2.2'
+        kotlinVersion = '1.1.2-4'
+        daggerVersion = '2.10'
+        firebaseVersion = '11.0.1'
+    }
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.0.0'
@@ -18,9 +41,14 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
