--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ buildscript {
 
         // App dependencies
         supportLibraryVersion = '26.0.0-beta2'
-        guavaVersion = '18.0'
         glideVersion = '3.6.1'
         junitVersion = '4.12'
         mockitoVersion = '2.7.21'
@@ -19,8 +18,7 @@ buildscript {
         runnerVersion = '0.5'
         rulesVersion = '0.5'
         espressoVersion = '2.2.2'
-        kotlinVersion = '1.1.2-4'
-        daggerVersion = '2.10'
+        kotlinVersion = '1.1.3-2'
         firebaseVersion = '11.0.1'
     }
     repositories {
@@ -30,7 +28,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha6'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -44,6 +42,7 @@ allprojects {
         maven {
             url 'https://maven.google.com'
         }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 }
 
