--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ buildscript {
         espressoVersion = '2.2.2'
         kotlinVersion = '1.1.3-2'
         firebaseVersion = '11.0.1'
+        rxJavaVersion = '2.1.1'
+        rxAndroidVersion = '2.0.1'
     }
     repositories {
         jcenter()
