--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         buildToolsVersion = '26.0.0'
 
         // App dependencies
-        supportLibraryVersion = '26.0.0-beta2'
+        supportLibraryVersion = '26.1.0'
         glideVersion = '3.6.1'
         junitVersion = '4.12'
         mockitoVersion = '2.7.21'
@@ -18,7 +18,7 @@ buildscript {
         runnerVersion = '0.5'
         rulesVersion = '0.5'
         espressoVersion = '2.2.2'
-        kotlinVersion = '1.1.3-2'
+        kotlinVersion = '1.1.50'
         firebaseVersion = '11.0.1'
         rxJavaVersion = '2.1.1'
         rxAndroidVersion = '2.0.1'
@@ -30,7 +30,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
