--- a/build.gradle
+++ b/build.gradle
@@ -7,21 +7,30 @@ buildscript {
         minSdkVersion = 21
         targetSdkVersion = 25
         compileSdkVersion = 26
-        buildToolsVersion = '26.0.0'
+        buildToolsVersion = '26.0.2'
 
         // App dependencies
+        kotlinVersion = '1.1.51'
         supportLibraryVersion = '26.1.0'
-        glideVersion = '3.6.1'
+        constraintLayoutVersion = '1.1.0-beta1'
+        lifeCyclesRuntimesVersion = '1.0.0'
+        lifeCyclesExtensionsVersion = '1.0.0-alpha9-1'
+        lifeCyclesCompilerVersion = '1.0.0-alpha9-1'
+        firebaseVersion = '11.4.2'
+
+        rxJavaVersion = '2.1.1'
+        rxAndroidVersion = '2.0.1'
+        rxBindingVersion = '2.0.0'
+        timberVersion = '4.5.1'
+        threeTenAbpVersion = '1.0.5'
+
         junitVersion = '4.12'
         mockitoVersion = '2.7.21'
         hamcrestVersion = '1.3'
         runnerVersion = '0.5'
         rulesVersion = '0.5'
         espressoVersion = '2.2.2'
-        kotlinVersion = '1.1.50'
-        firebaseVersion = '11.0.1'
-        rxJavaVersion = '2.1.1'
-        rxAndroidVersion = '2.0.1'
+        robolectricVersion = '3.4'
     }
     repositories {
         jcenter()
@@ -30,7 +39,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
