Remove rx java and replace with coroutines. Add permission handling Much more refactoring.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
                 android:name=".team.SelectTeamActivity"
                 android:theme="@style/AppTheme.NoActionBar"/>
 
-        <activity android:name=".match.MatchActivity"
-                  android:label="@string/create_match_label"/>
+        <activity
+                android:name=".match.MatchActivity"
+                android:label="@string/create_match_label"/>
     </application>
 
 </manifest>
