--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,26 +33,37 @@ android {
     }
 }
 
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
+
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlinVersion"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.coroutinesVersion"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutinesVersion"
+
     compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
     compile "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
-    compile "com.google.firebase:firebase-core:$rootProject.ext.firebaseVersion"
-    compile "com.google.firebase:firebase-database:$rootProject.ext.firebaseVersion"
-    compile "com.google.firebase:firebase-auth:$rootProject.ext.firebaseVersion"
-    compile "com.jakewharton.timber:timber:$rootProject.ext.timberVersion"
-    compile "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxJavaVersion"
-    compile "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxAndroidVersion"
-    compile "com.jakewharton.rxbinding2:rxbinding:$rootProject.ext.rxBindingVersion"
-    compile "com.jakewharton.threetenabp:threetenabp:$rootProject.ext.threeTenAbpVersion"
 
     compile "android.arch.lifecycle:runtime:$rootProject.ext.lifeCyclesRuntimesVersion"
     compile "android.arch.lifecycle:extensions:$rootProject.ext.lifeCyclesExtensionsVersion"
+    compile "android.arch.lifecycle:reactivestreams:$rootProject.ext.lifeCyclesReativeStreamsVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.lifeCyclesCompilerVersion"
+
+    compile "com.google.firebase:firebase-core:$rootProject.ext.firebaseVersion"
+    compile "com.google.firebase:firebase-database:$rootProject.ext.firebaseVersion"
+    compile "com.google.firebase:firebase-auth:$rootProject.ext.firebaseVersion"
+    compile "com.google.firebase:firebase-firestore:$rootProject.ext.firebaseVersion"
+
+    compile "com.jakewharton.timber:timber:$rootProject.ext.timberVersion"
+    compile "com.jakewharton.threetenabp:threetenabp:$rootProject.ext.threeTenAbpVersion"
 
     testCompile "junit:junit:$rootProject.ext.junitVersion"
     testCompile "org.robolectric:robolectric:$rootProject.ext.robolectricVersion"
