--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,19 +46,19 @@ kotlin {
 
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlinVersion"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.coroutinesVersion"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutinesVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlinVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutinesVersion"
 
-    compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-    compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
-    compile "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
+    implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
 
-    compile "android.arch.lifecycle:runtime:$rootProject.ext.lifeCyclesRuntimesVersion"
-    compile "android.arch.lifecycle:extensions:$rootProject.ext.lifeCyclesExtensionsVersion"
+    implementation "android.arch.lifecycle:runtime:$rootProject.ext.lifeCyclesRuntimesVersion"
+    implementation "android.arch.lifecycle:extensions:$rootProject.ext.lifeCyclesExtensionsVersion"
     kapt "android.arch.lifecycle:compiler:$rootProject.ext.lifeCyclesCompilerVersion"
 
     implementation "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
@@ -66,18 +66,18 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
     kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"
 
-    compile "com.google.firebase:firebase-core:$rootProject.ext.firebaseVersion"
-    compile "com.google.firebase:firebase-database:$rootProject.ext.firebaseVersion"
-    compile "com.google.firebase:firebase-auth:$rootProject.ext.firebaseVersion"
-    compile "com.google.firebase:firebase-firestore:$rootProject.ext.firebaseVersion"
+    implementation "com.google.firebase:firebase-core:$rootProject.ext.firebaseVersion"
+    implementation "com.google.firebase:firebase-database:$rootProject.ext.firebaseVersion"
+    implementation "com.google.firebase:firebase-auth:$rootProject.ext.firebaseVersion"
+    implementation "com.google.firebase:firebase-firestore:$rootProject.ext.firebaseVersion"
 
-    compile "com.jakewharton.timber:timber:$rootProject.ext.timberVersion"
-    compile "com.jakewharton.threetenabp:threetenabp:$rootProject.ext.threeTenAbpVersion"
+    implementation "com.jakewharton.timber:timber:$rootProject.ext.timberVersion"
+    implementation "com.jakewharton.threetenabp:threetenabp:$rootProject.ext.threeTenAbpVersion"
 
-    testCompile "junit:junit:$rootProject.ext.junitVersion"
-    testCompile "org.robolectric:robolectric:$rootProject.ext.robolectricVersion"
+    testImplementation "junit:junit:$rootProject.ext.junitVersion"
+    testImplementation "org.robolectric:robolectric:$rootProject.ext.robolectricVersion"
 
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion", {
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
