Use AndroidInjectors for DI

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
         buildToolsVersion = '27.0.3'
 
         // App dependencies
-        daggerVersion = '2.14.1'
-        kotlinVersion = '1.2.30'
+        daggerVersion = '2.15'
+        kotlinVersion = '1.2.31'
         coroutinesVersion = '0.21'
         supportLibraryVersion = '27.1.0'
         constraintLayoutVersion = '1.1.0-beta4'
@@ -39,7 +39,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha06'
+        classpath 'com.android.tools.build:gradle:3.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
