--- a/build.gradle
+++ b/build.gradle
@@ -5,32 +5,33 @@ buildscript {
     ext {
         // Sdk and tools
         minSdk =  21
-        targetSdk =  27
-        compileSdkVersion = 27
+        targetSdk =  28
+        compileSdkVersion = 28
 
         // App dependencies
         daggerVersion = '2.17'
 
-        kotlinVersion = '1.2.61'
+        kotlinVersion = '1.3.0-rc-131'
+        kotlinGradlePluginVerison = '1.3.0-rc-146'
 
-        coroutinesVersion = '0.24.0'
+        coroutinesVersion = '0.30.1-eap13'
 
-        supportLibraryVersion = '27.1.1'
+        supportLibraryVersion = '28.0.0'
 
         nav_version = "1.0.0-alpha01"
 
-        constraintLayoutVersion = '1.1.2'
+        constraintLayoutVersion = '1.1.3'
 
         lifeCyclesRuntimesVersion = '1.1.1'
         lifeCyclesExtensionsVersion = '1.1.1'
         lifeCyclesCompilerVersion = '1.1.0'
 
-        firebaseCoreVersion = '16.0.1'
+        firebaseCoreVersion = '16.0.4'
         firebaseDatabaseVersion = '16.0.1'
-        firebaseAuthVersion = '16.0.2'
+        firebaseAuthVersion = '16.0.4'
         firestoreVersion = '17.0.4'
 
-        timberVersion = '4.7.0'
+        timberVersion = '4.7.1'
         threeTenAbpVersion = '1.1.0'
 
         junitVersion = '4.12'
@@ -41,19 +42,20 @@ buildscript {
         espressoVersion = '2.2.2'
         robolectricVersion = '3.4'
     }
+
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com'
-        }
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap'}
+        maven { url 'https://maven.google.com' }
         google()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinGradlePluginVerison"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.gms:google-services:4.1.0'
     }
 }
 
@@ -64,6 +66,7 @@ plugins {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap'}
         maven { url 'https://maven.google.com' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
@@ -82,7 +85,6 @@ detekt {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
 
 subprojects {
     afterEvaluate {
