--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,6 +9,9 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutinesVersion"
 
     api "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
+    api "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
+    api "com.android.support:animated-vector-drawable:$rootProject.ext.supportLibraryVersion"
+    api "com.android.support:support-media-compat:$rootProject.ext.supportLibraryVersion"
     api "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
     api "android.arch.lifecycle:extensions:$rootProject.ext.lifeCyclesExtensionsVersion"
 
