--- a/importcontacts/build.gradle
+++ b/importcontacts/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation project(":core")
     implementation project(":data")
 
-    kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
-    kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${versions.dagger}"
 
 }
