--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,57 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    // Define versions in a single place
-    ext {
-        // Sdk and tools
-        minSdk =  21
-        targetSdk =  28
-        compileSdkVersion = 28
+    ext.versions = [
+            'android_gradle'      : '3.2.1',
+            'androidx'            : [
+                    'appcompat'        : '1.0.0',
+                    'card_view'        : '1.0.0',
+                    'core'             : '2.0.0',
+                    'constraint_layout': '1.1.3',
+                    'fragment'         : '1.0.0',
+                    'lifecycle'        : '2.0.0',
+                    'palette'          : '1.0.0',
+                    'recyclerview'     : '1.0.0',
+                    'test_runner'      : '1.1.0-alpha4',
+                    'test_rules'       : '1.1.0-alpha4',
+            ],
+            'kotlin'              : '1.3.0-rc-131',
+            'kotlin_gradle_plugin': '1.3.0-rc-190',
+            'coroutines'          : '0.30.1-eap13',
+            'material'            : '1.0.0',
+            'firebase_core'       : '16.0.4',
+            'firebase_auth'       : '16.0.5',
+            'firebase_database'   : '16.0.3',
+            'firestore'           : '17.1.1',
+            'google_services'     : '4.1.0',
+            'dagger'              : '2.16', // Pinning this due to https://issuetracker.google.com/115738511
+            'threetenabp'         : '1.1.0',
+            'timber'              : '4.7.1',
+            'espresso'            : '3.1.0-alpha4',
+            'junit'               : '4.12',
+            'mockito'             : '2.7.21',
+            'hamcrest'            : '1.3',
+            'robolectric'         : '3.4',
+            'detek'               : '1.0.0.RC6-4'
 
-        // App dependencies
-        daggerVersion = '2.17'
-
-        kotlinVersion = '1.3.0-rc-131'
-        kotlinGradlePluginVerison = '1.3.0-rc-146'
-
-        coroutinesVersion = '0.30.1-eap13'
-
-        supportLibraryVersion = '28.0.0'
-
-        nav_version = "1.0.0-alpha01"
-
-        constraintLayoutVersion = '1.1.3'
-
-        lifeCyclesRuntimesVersion = '1.1.1'
-        lifeCyclesExtensionsVersion = '1.1.1'
-        lifeCyclesCompilerVersion = '1.1.0'
-
-        firebaseCoreVersion = '16.0.4'
-        firebaseDatabaseVersion = '16.0.1'
-        firebaseAuthVersion = '16.0.4'
-        firestoreVersion = '17.0.4'
-
-        timberVersion = '4.7.1'
-        threeTenAbpVersion = '1.1.0'
-
-        junitVersion = '4.12'
-        mockitoVersion = '2.7.21'
-        hamcrestVersion = '1.3'
-        runnerVersion = '0.5'
-        rulesVersion = '0.5'
-        espressoVersion = '2.2.2'
-        robolectricVersion = '3.4'
-    }
+    ]
+    ext.buildConfig = [
+            'minSdk'    : 21,
+            'compileSdk': 28,
+            'targetSdk' : 28,
+    ]
 
     repositories {
         jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap'}
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         maven { url 'https://maven.google.com' }
         google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinGradlePluginVerison"
+        classpath "com.android.tools.build:gradle:$versions.android_gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_gradle_plugin"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.1.0'
+        classpath "com.google.gms:google-services:$versions.google_services"
     }
 }
 
@@ -66,14 +62,14 @@ plugins {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap'}
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         maven { url 'https://maven.google.com' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 }
 
 detekt {
-    version = "1.0.0.RC6-3"
+    version = "${versions.detek}"
     profile("main") {
         input = "$projectDir/app"
         config = "$projectDir/quality/detekt-config.yml"
