--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,31 +4,30 @@ apply from: "../base-android-library.gradle"
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlinVersion"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.coroutinesVersion"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutinesVersion"
+    api "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
 
-    api "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-    api "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
-    api "com.android.support:animated-vector-drawable:$rootProject.ext.supportLibraryVersion"
-    api "com.android.support:support-media-compat:$rootProject.ext.supportLibraryVersion"
-    api "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
-    api "android.arch.lifecycle:extensions:$rootProject.ext.lifeCyclesExtensionsVersion"
+    api "androidx.appcompat:appcompat:${versions.androidx.appcompat}"
+    api "androidx.constraintlayout:constraintlayout:${versions.androidx.constraint_layout}"
 
-    api "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
-    api "com.google.dagger:dagger-android-support:$rootProject.ext.daggerVersion"
+    api "androidx.recyclerview:recyclerview:${versions.androidx.recyclerview}"
+    api "androidx.lifecycle:lifecycle-extensions:${versions.androidx.lifecycle}"
 
-    api "com.google.firebase:firebase-core:$rootProject.ext.firebaseCoreVersion"
-    api "com.google.firebase:firebase-auth:$rootProject.ext.firebaseAuthVersion"
+    api "com.google.dagger:dagger-android:${versions.dagger}"
+    api "com.google.dagger:dagger-android-support:${versions.dagger}"
 
-    api "com.jakewharton.timber:timber:$rootProject.ext.timberVersion"
-    api "com.jakewharton.threetenabp:threetenabp:$rootProject.ext.threeTenAbpVersion"
+    api "com.google.firebase:firebase-core:${versions.firebase_core}"
+    api "com.google.firebase:firebase-auth:${versions.firebase_auth}"
 
-    testImplementation "junit:junit:$rootProject.ext.junitVersion"
-    testImplementation "org.robolectric:robolectric:$rootProject.ext.robolectricVersion"
+    api "com.jakewharton.timber:timber:${versions.timber}"
+    api "com.jakewharton.threetenabp:threetenabp:${versions.threetenabp}"
 
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation("com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion", {
+    testImplementation "junit:junit:${versions.junit}"
+    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
+
+    androidTestImplementation "androidx.test:runner:${versions.androidx.test_runner}"
+    androidTestImplementation("androidx.test.espresso:espresso-core:${versions.espresso}", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
