Add tests for the import contacts module, add shared test module, update kotlin and coroutines versions

--- a/base-android-library.gradle
+++ b/base-android-library.gradle
@@ -26,6 +26,8 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
+
 }
