--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,15 @@ buildscript {
                     'lifecycle'        : '2.0.0',
                     'palette'          : '1.0.0',
                     'recyclerview'     : '1.0.0',
-                    'test_runner'      : '1.1.0-alpha4',
-                    'test_rules'       : '1.1.0-alpha4',
+                    'test_runner'      : '1.1.0',
+                    'test_core'        : '1.0.0',
+                    'test_rules'       : '1.1.0',
+                    'test_junit'       : '1.0.0',
+                    'arch_core_testing': "1.0.0"
             ],
-            'kotlin'              : '1.3.0-rc-131',
-            'kotlin_gradle_plugin': '1.3.0-rc-190',
-            'coroutines'          : '0.30.1-eap13',
+            'kotlin'              : '1.3.10',
+            'kotlin_gradle_plugin': '1.3.10',
+            'coroutines'          : '1.0.0',
             'material'            : '1.0.0',
             'firebase_core'       : '16.0.4',
             'firebase_auth'       : '16.0.5',
@@ -27,9 +30,10 @@ buildscript {
             'timber'              : '4.7.1',
             'espresso'            : '3.1.0-alpha4',
             'junit'               : '4.12',
-            'mockito'             : '2.7.21',
+            'mockito'             : '2.23.0',
+            'mockito_kotlin'      : '2.0.0-RC3',
             'hamcrest'            : '1.3',
-            'robolectric'         : '3.4',
+            'robolectric'         : '4.0.1',
             'detek'               : '1.0.0.RC6-4'
 
     ]
@@ -40,10 +44,9 @@ buildscript {
     ]
 
     repositories {
-        jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-        maven { url 'https://maven.google.com' }
         google()
+        jcenter()
+        maven { url 'https://maven.google.com' }
     }
 
     dependencies {
