--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,6 +25,11 @@ dependencies {
 
     testImplementation "junit:junit:${versions.junit}"
     testImplementation "org.robolectric:robolectric:${versions.robolectric}"
+    testImplementation "androidx.test:core:${versions.androidx.test_core}"
+    testImplementation "androidx.test:runner:${versions.androidx.test_runner}"
+    testImplementation "android.arch.core:core-testing:${versions.androidx.arch_core_testing}"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+    testImplementation "org.mockito:mockito-core:${versions.mockito}"
 
     androidTestImplementation "androidx.test:runner:${versions.androidx.test_runner}"
     androidTestImplementation("androidx.test.espresso:espresso-core:${versions.espresso}", {
