--- a/playerlist/build.gradle
+++ b/playerlist/build.gradle
@@ -20,4 +20,6 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
     kapt "com.google.dagger:dagger-android-processor:${versions.dagger}"
 
+    testImplementation project(":test_shared")
+
 }
