--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,12 @@ buildscript {
             'kotlin_gradle_plugin': '1.3.10',
             'coroutines'          : '1.0.0',
             'material'            : '1.0.0',
-            'firebase_core'       : '16.0.4',
+            'firebase_core'       : '16.0.6',
             'firebase_auth'       : '16.0.5',
             'firebase_database'   : '16.0.3',
             'firestore'           : '17.1.1',
+            'crashlytics'         : '2.9.7',
+            'fabric_gradle'       : '1.26.1',
             'google_services'     : '4.1.0',
             'dagger'              : '2.16', // Pinning this due to https://issuetracker.google.com/115738511
             'threetenabp'         : '1.1.0',
@@ -47,6 +49,7 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
@@ -55,6 +58,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "com.google.gms:google-services:$versions.google_services"
+        classpath "io.fabric.tools:gradle:$versions.fabric_gradle"
     }
 }
 
