--- a/matchlist/build.gradle
+++ b/matchlist/build.gradle
@@ -7,6 +7,12 @@ apply plugin: 'dagger.hilt.android.plugin'
 androidExtensions {
     experimental = true
 }
+android {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
