--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -51,8 +54,12 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:${versions.androidx.lifecycle}"
 
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
+
+    kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
     kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
