--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,23 @@ buildscript {
     ext.versions = [
             'android_gradle'      : '4.1.0',
             'androidx'            : [
-                    'appcompat'        : '1.2.0',
-                    'card_view'        : '1.0.0',
-                    'core'             : '2.0.0',
-                    'constraint_layout': '1.1.3',
-                    'fragment'         : '1.0.0',
-                    'lifecycle'        : '2.2.0',
-                    'palette'          : '1.0.0',
-                    'recyclerview'     : '1.1.0',
-                    'test_runner'      : '1.1.0',
-                    'test_core'        : '1.0.0',
-                    'test_rules'       : '1.1.0',
-                    'test_junit'       : '1.0.0',
-                    'arch_core_testing': "1.0.0"
+                    'appcompat'               : '1.2.0',
+                    'card_view'               : '1.0.0',
+                    'core'                    : '2.0.0',
+                    'constraint_layout'       : '1.1.3',
+                    'fragment'                : '1.0.0',
+                    'lifecycle'               : '2.2.0',
+                    'palette'                 : '1.0.0',
+                    'recyclerview'            : '1.1.0',
+                    'test_runner'             : '1.1.0',
+                    'test_core'               : '1.0.0',
+                    'test_rules'              : '1.1.0',
+                    'test_junit'              : '1.0.0',
+                    'arch_core_testing'       : "1.0.0",
+                    'hilt_compiler'           : "1.0.0-alpha02",
+                    'hilt_lifecycle_viewmodel': "1.0.0-alpha02",
+                    'activity_ktx'            : "1.1.0",
+                    'fragment_ktx'            : "1.2.5",
             ],
             'kotlin'              : '1.4.10',
             'kotlin_gradle_plugin': '1.4.10',
