--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext.versions = [
-            'android_gradle'      : '4.1.0',
-            'androidx'            : [
+            'android_gradle'             : '4.1.0',
+            'androidx'                   : [
                     'appcompat'               : '1.2.0',
                     'card_view'               : '1.0.0',
                     'core'                    : '2.0.0',
@@ -20,28 +20,28 @@ buildscript {
                     'activity_ktx'            : "1.1.0",
                     'fragment_ktx'            : "1.2.5",
             ],
-            'kotlin'              : '1.4.10',
-            'kotlin_gradle_plugin': '1.4.10',
-            'coroutines'          : '1.3.7',
-            'material'            : '1.0.0',
-            'firebase_core'       : '16.0.9',
-            'firebase_auth'       : '17.0.0',
-            'firebase_database'   : '16.0.3',
-            'firestore'           : '17.1.1',
-            'crashlytics'         : '2.9.7',
-            'fabric_gradle'       : '1.26.1',
-            'google_services'     : '4.2.0',
-            'dagger'              : '2.29.1',
-            'dagger_hilt'         : '2.29-alpha',
-            'threetenabp'         : '1.1.0',
-            'timber'              : '4.7.1',
-            'espresso'            : '3.1.0-alpha4',
-            'junit'               : '4.12',
-            'mockito'             : '2.23.0',
-            'mockito_kotlin'      : '2.0.0-RC3',
-            'hamcrest'            : '1.3',
-            'robolectric'         : '4.0.1',
-            'detek'               : '1.0.0.RC6-4'
+            'kotlin'                     : '1.4.10',
+            'kotlin_gradle_plugin'       : '1.4.10',
+            'coroutines'                 : '1.3.7',
+            'material'                   : '1.0.0',
+            'firebase_core'              : '16.0.9',
+            'firebase_auth'              : '17.0.0',
+            'firebase_database'          : '16.0.3',
+            'firestore'                  : '17.1.1',
+            'firebase_crashlytics'       : '17.2.2',
+            'firebase_crashlytics_gradle': '2.4.1',
+            'google_services'            : '4.2.0',
+            'dagger'                     : '2.29.1',
+            'dagger_hilt'                : '2.29-alpha',
+            'threetenabp'                : '1.1.0',
+            'timber'                     : '4.7.1',
+            'espresso'                   : '3.1.0-alpha4',
+            'junit'                      : '4.12',
+            'mockito'                    : '2.23.0',
+            'mockito_kotlin'             : '2.0.0-RC3',
+            'hamcrest'                   : '1.3',
+            'robolectric'                : '4.0.1',
+            'detek'                      : '1.0.0.RC6-4'
 
     ]
     ext.buildConfig = [
@@ -54,14 +54,13 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://maven.google.com' }
-        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath "com.android.tools.build:gradle:$versions.android_gradle"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_gradle_plugin"
         classpath "com.google.gms:google-services:$versions.google_services"
-        classpath "io.fabric.tools:gradle:$versions.fabric_gradle"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$versions.firebase_crashlytics_gradle"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.dagger_hilt"
     }
 }
@@ -72,6 +71,7 @@ plugins {
 
 allprojects {
     repositories {
+        google()
         jcenter()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         maven { url 'https://maven.google.com' }
