--- a/playerlist/build.gradle
+++ b/playerlist/build.gradle
@@ -7,6 +7,11 @@ apply plugin: 'dagger.hilt.android.plugin'
 androidExtensions {
     experimental = true
 }
+android {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -21,6 +26,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
     kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
+    kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
 
     testImplementation project(":test_shared")
 
