Fix release build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
+
+    //TODO try and update firebase and androidx to fix this
+    packagingOptions {
+        exclude 'META-INF/ASL2.0'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
