--- a/importcontacts/build.gradle
+++ b/importcontacts/build.gradle
@@ -3,17 +3,38 @@ apply from: "../base-android-library.gradle"
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
-androidExtensions {
-    experimental = true
-}
 android {
-    kotlinOptions {
-        jvmTarget = "1.8"
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerVersion "${versions.kotlin}"
+        kotlinCompilerExtensionVersion "${versions.compose}"
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation "androidx.compose.runtime:runtime:${versions.compose}"
+    implementation "androidx.compose.ui:ui:${versions.compose}"
+    implementation "androidx.compose.foundation:foundation-layout:${versions.compose}"
+    implementation "androidx.compose.material:material:${versions.compose}"
+    implementation "androidx.compose.material:material-icons-extended:${versions.compose}"
+    implementation "androidx.compose.foundation:foundation:${versions.compose}"
+    implementation "androidx.compose.animation:animation:${versions.compose}"
+    implementation "androidx.compose.ui:ui-tooling:${versions.compose}"
+    implementation "androidx.compose.runtime:runtime-livedata:${versions.compose}"
+
+
+//    // UI Tests
+//    androidTestImplementation "androidx.ui:ui-test:${versions.compose}"
 
     implementation project(":core")
     implementation project(":data")
