--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,6 @@ kapt {
     correctErrorTypes = true
 }
 
-androidExtensions {
-    experimental = true
-}
 
 android {
     defaultConfig {
@@ -22,7 +19,7 @@ android {
 
     }
 
-   // remove once https://github.com/Kotlin/kotlinx.coroutines/issues/2023 is fixed
+    // remove once https://github.com/Kotlin/kotlinx.coroutines/issues/2023 is fixed
     packagingOptions {
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
@@ -32,8 +29,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = "1.8"
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerVersion "${versions.kotlin}"
+        kotlinCompilerExtensionVersion "${versions.compose}"
     }
 }
 
@@ -60,12 +63,21 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime:${versions.androidx.lifecycle}"
     kapt "androidx.lifecycle:lifecycle-compiler:${versions.androidx.lifecycle}"
 
+    implementation "androidx.compose.runtime:runtime:${versions.compose}"
+    implementation "androidx.compose.ui:ui:${versions.compose}"
+    implementation "androidx.compose.foundation:foundation-layout:${versions.compose}"
+    implementation "androidx.compose.material:material:${versions.compose}"
+    implementation "androidx.compose.material:material-icons-extended:${versions.compose}"
+    implementation "androidx.compose.foundation:foundation:${versions.compose}"
+    implementation "androidx.compose.animation:animation:${versions.compose}"
+    implementation "androidx.compose.ui:ui-tooling:${versions.compose}"
+    implementation "androidx.compose.runtime:runtime-livedata:${versions.compose}"
+
     implementation "com.google.dagger:hilt-android:${versions.dagger_hilt}"
 
     kapt "androidx.hilt:hilt-compiler:${versions.androidx.hilt_compiler}"
     kapt "com.google.dagger:hilt-android-compiler:${versions.dagger_hilt}"
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
-
 
 }
 
