--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.versions = [
-            'android_gradle'             : '4.1.0',
+            'android_gradle'             : '7.0.0-alpha02',
             'androidx'                   : [
                     'appcompat'               : '1.2.0',
                     'card_view'               : '1.0.0',
@@ -19,10 +19,11 @@ buildscript {
                     'activity_ktx'            : "1.1.0",
                     'fragment_ktx'            : "1.2.5",
             ],
-            'kotlin'                     : '1.4.10',
-            'kotlin_gradle_plugin'       : '1.4.10',
+            'kotlin'                     : '1.4.20',
+            'kotlin_gradle_plugin'       : '1.4.20',
             'coroutines'                 : '1.3.7',
             'material'                   : '1.0.0',
+            'compose'                    : '1.0.0-alpha08',
             'firebase_core'              : '16.0.9',
             'firebase_auth'              : '17.0.0',
             'firebase_database'          : '16.0.3',
@@ -45,7 +46,7 @@ buildscript {
     ]
     ext.buildConfig = [
             'minSdk'    : 21,
-            'compileSdk': 28,
+            'compileSdk': 30,
             'targetSdk' : 28,
     ]
 
@@ -92,7 +93,21 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+
+
 subprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = '1.8'
+           // allWarningsAsErrors = true
+            freeCompilerArgs += '-Xallow-jvm-ir-dependencies'
+            // Opt-in to experimental compose APIs
+            freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
+            // Enable experimental coroutines APIs, including collectAsState()
+            freeCompilerArgs += '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi'
+        }
+    }
+
     afterEvaluate {
         if (pluginManager.hasPlugin("kotlin-kapt")) {
             kapt {
