--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ subprojects {
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         kotlinOptions {
             jvmTarget = '1.8'
+            useIR = true
            // allWarningsAsErrors = true
             freeCompilerArgs += '-Xallow-jvm-ir-dependencies'
             // Opt-in to experimental compose APIs
